--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ python = "^3.8"
 textual = "==0.30.0"
 textual-textarea = "==0.3.2"
 click = "^8.1.3"
-duckdb = ">=0.8.0"
+duckdb = "==0.8.0"
 shandy-sqlfmt = ">=0.19.0"
 
 [tool.poetry.group.dev.dependencies]
