--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.dependencies]
 python = "^3.8"
 textual = "==0.30.0"
-textual-textarea = "==0.3.2"
+textual-textarea = { git = "https://github.com/dljsjr/textual-textarea.git", branch="expand-user-homedirs-on-save-and-load" }
 click = "^8.1.3"
 duckdb = "==0.8.0"
 shandy-sqlfmt = ">=0.19.0"
